# PythonProject

./: .coverage  .env  .flake8  .gitignore  README.md  decorators.py  main.py  mypy  pyproject.toml  structure.txt
Project1/src/: main.py  utils.py
decorators/: log.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
new_project/: pyproject.toml
src/: external_api.py  generators.py  masks.py  processing  processing.py  utils.py  widget.py
tests/: code.py  conftest.py  test.processing.py  test.widget.py  test_calc.py  test_decorators.py  test_external_api.py  test_generators.py  test_log.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  test_widget_cover.py
