[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
name = "bank-widget-masks"
version = "0.1.0"
description = "Masking utilities for bank card and account numbers"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "masks", from = "src" }]

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.lint.dependencies]
black = "^24.3"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 119
# exclude pattern: используем стандартный формат (regex)
exclude = '''
/(
  \.git
)/
'''

# isort configuration
[tool.isort]
line_length = 119
profile = "black"
# Чтобы isort использовал один импорт на строку при необходимости:
force_single_line = true

# flake8 configuration (flake8 также может читать из pyproject.toml в современных версиях)
[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__"]

# mypy configuration
[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
# Исключаем виртуальные окружения
exclude = "venv"